--- a/WebApiCall-Product/Views/Home/Index.cshtml
+++ b/WebApiCall-Product/Views/Home/Index.cshtml
@@ -60,7 +60,7 @@
 
                     @foreach (var item in Model)
                     {
-                    <div class="col mb-5" style="border:2px solid  @item.Color">
+                    <div class="col mb-5" style="border:2px solid @item.Color">
                         <div class="card h-100">
                             <!-- Product image-->
                             <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
@@ -75,7 +75,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                                <div class="text-center"><a href="https://localhost:7096/Home/Detail?id=@item.ProductId" class="btn btn-outline-dark mt-auto" href="#">Detay</a></div>
                             </div>
                         </div>
                     </div>
